# trabalho-grafos

./: .gitignore  CMakeLists.txt  Grafo.h  main.cpp
src/lista-encadeada/: Aresta.cpp  Aresta.h  Coloracao.h  Grafo.cpp  Grafo.h  GrafoLista.cpp  GrafoLista.h  Grafo_Lista.cpp  Vertice.cpp  Vertice.h  main.cpp
